docs/Parser/Context Free Grammar.txt
S 			→ PROG | PROC

PROG 		→ CODE PROG'

PROG' 		→ ; PROC_DEFS | ϵ

PROC_DEFS 	→ PROC PROC_DEFS'

PROC_DEFS'  → PROC_DEFS | ϵ

PROC 		→ proc UserDefinedIdentifier { PROG }

CODE 		→ INSTR CODE'

CODE' 		→ ; CODE | ϵ

DECL 		→ TYPE NAME CODE'

# DECL' 	→ ; INSTR | ϵ

COND_BRANCH → if ( BOOL ) then { CODE } COND_BRANCH'

COND_BRANCH'→ else { CODE } | ϵ

COND_LOOP 	→ while ( BOOL ) { CODE } | for ( VAR = 0; VAR < VAR ; VAR = add ( VAR , 1 ) ) { CODE }

IO 			→ input ( VAR ) | output ( VAR )

BOOL 		→ T | F | VAR | eq ( VAR , VAR ) | ( VAR < VAR ) | ( VAR > VAR ) | not BOOL | and ( BOOL' | or ( BOOL'

BOOL' 		→ BOOL , BOOL"

BOOL" 		→ BOOL )

CALC 		→ add ( CALC' | sub ( CALC' | mult ( CALC'

CALC' 		→ NUMEXPR , CALC"

CALC" 		→ NUMEXPR )

ASSIGN 		→ VAR = ASSIGN'

ASSIGN' 	→ stringLiteral | VAR | NUMEXPR | BOOL

INSTR 		→ halt | DECL | IO | CALL | ASSIGN  | COND_BRANCH | COND_LOOP

NUMEXPR 	→ VAR | CALC | integerLiteral

TYPE 		→ num | string | bool

CALL 		→ userDefinedIdentifier

NAME 		→ userDefinedIdentifier

VAR 		→ userDefinedIdentifier
